# in_vgm-libvgm

./: .gitignore  .gitmodules  CMakeLists.txt  FileInfoStorage.cpp  FileInfoStorage.hpp  TagFormatter.cpp  TagFormatter.hpp  Updates.txt  dlg_cfg.cpp  dlg_fileinfo.cpp  extFileInfo.cpp  in_vgm.cpp  in_vgm.h  in_vgm.rc  in_vgm.sln  in_vgm.vcxproj  in_vgm.vcxproj.filters  ini_func.c  ini_func.h  playcfg.cpp  playcfg.hpp  resource.h  utils.cpp  utils.hpp
